@@ -1,1 +1,1 @@
-usr/share/doc/postgresql-doc-8.4/html/*
+usr/share/doc/postgresql/html usr/share/doc/postgresql-doc-8.4/
